--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "next": "12.2.2",
     "postcss": "^8.4.14",
     "react": "18.2.0",
+    "react-beautiful-dnd": "^13.1.0",
     "react-dom": "18.2.0",
     "recoil": "^0.7.4",
     "tailwindcss": "^3.1.6"
