--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "postcss": "^8.4.14",
     "react": "18.2.0",
     "react-beautiful-dnd": "^13.1.0",
+    "react-content-loader": "^6.2.0",
     "react-dom": "18.2.0",
     "recoil": "^0.7.4",
     "tailwindcss": "^3.1.6"
